<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12sp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextNewWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:textColor="#000" />


    <EditText
        android:id="@+id/editTextTranslationNewWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:textColor="#000"
        android:textColorHint="#666"/>

</LinearLayout>