<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEE">

    <ListView
        android:id="@+id/listViewLanguages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/transparent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="14sp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_white_24dp" />
</RelativeLayout>