<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.lzyzsd.circleprogress.DonutProgress
        android:id="@+id/donut_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        custom:donut_finished_color="@color/indigoAccent"
        custom:donut_progress="30"
        custom:donut_text_color="@color/indigoAccent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/donut_progress"
        android:layout_alignStart="@+id/donut_progress"
        android:layout_alignLeft="@+id/donut_progress"
        android:layout_alignEnd="@+id/donut_progress"
        android:layout_alignRight="@+id/donut_progress"
        android:gravity="center"
        android:text="@string/ofCorrectAnswer"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_done_white_24dp" />

</RelativeLayout>